--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<nav id="nav">
 				<ul class="links">
 					<li><a href="sobre.html">A Editora</a></li>
-					<li><a href="catalogo.html">Cat·logo</a></li>
+					<li><a href="catalogo.html">Cat√°logo</a></li>
 					<li><a href="blog.html">Blog</a></li>
 					<li><a href="#contato">Publique seu livro aqui</a></li>
 				</ul>
@@ -25,7 +25,7 @@
 			<section id="banner">
 				<i class="icon fa-eye"></i>
 				<h2>Editora Capitu</h2>
-				<p>VocÍ tem perguntas. NÛs temos livros.</p>
+				<p>Voc√™ tem perguntas. N√≥s temos livros.</p>
 				<ul class="actions">
 					<li><a href="sobre.html" class="button big special">Saber mais</a></li>
 				</ul>
@@ -37,8 +37,8 @@
 					<article class="feature left">
 						<span class="image"><img src="images/pic01.jpg" alt="" /></span>
 						<div class="content">
-							<h2>Novas coleÁıes</h2>
-							<p>As novas coleÁıes que est„o sendo preparadas para serem lanÁadas esse ano est„o sensacionais! Prepare-se para explorar o deslumbrante universo de Shakespeare, as mais que especiais obras de Machado de Assis, e v·rias outras surpresas para os f„s de leitura.</p>
+							<h2>Novas cole√ß√µes</h2>
+							<p>As novas cole√ß√µes que est√£o sendo preparadas para serem lan√ßadas esse ano est√£o sensacionais! Prepare-se para explorar o deslumbrante universo de Shakespeare, as mais que especiais obras de Machado de Assis, e v√°rias outras surpresas para os f√£s de leitura.</p>
 							<ul class="actions">
 								<li>
 									<a href="blog.html" class="button alt">Mais</a>
@@ -50,7 +50,7 @@
 						<span class="image"><img src="images/pic02.jpg" alt="" /></span>
 						<div class="content">
 							<h2>Confira nossos e-Books</h2>
-							<p>A editora Capitu produz E-books de seus livros na tentativa de torn·-los mais acessÌveis para os diversos tipos de leitores. Venha ver nossos livros digitais, eles s„o pagos mas temos gratuitos tambÈm!</p>
+							<p>A editora Capitu produz E-books de seus livros na tentativa de torn√°-los mais acess√≠veis para os diversos tipos de leitores. Venha ver nossos livros digitais, eles s√£o pagos mas temos gratuitos tamb√©m!</p>
 							<ul class="actions">
 								<li>
 									<a href="blog.html" class="button alt">Mais</a>
@@ -65,7 +65,7 @@
 			<section id="two" class="wrapper special">
 				<div class="inner">
 					<header class="major narrow">
-						<h2>⁄ltimos LanÁamentos</h2>
+						<h2>√öltimos Lan√ßamentos</h2>
 					</header>
 					<div class="image-grid">
 						<a class="image"><img src="images/l1.png" alt="" /></a>
@@ -78,7 +78,7 @@
 						<a class="image"><img src="images/l8.png" alt="" /></a>
 					</div>
 					<ul class="actions">
-						<li><a href="catalogo.html" class="button big alt">Ir para o Cat·logo</a></li>
+						<li><a href="catalogo.html" class="button big alt">Ir para o Cat√°logo</a></li>
 					</ul>
 				</div>
 			</section>
@@ -87,11 +87,11 @@
 			<section id="three" class="wrapper style3 special">
 				<div class="inner">
 					<header class="major narrow	">
-						<h2>Centen·rio Capitolino</h2>
+						<h2>Centen√°rio Capitolino</h2>
 						<p>Esse ano a editora Capitu completa 100 anos, e para comemorar trouxemos uma novidade encantadora.</p>
 					</header>
 					<ul class="actions">
-						<li><a href="centen·rio.html" class="button big alt">Descubra</a></li>
+						<li><a href="centen√°rio.html" class="button big alt">Descubra</a></li>
 					</ul>
 				</div>
 			</section>
